# async_get_images

./: .gitignore  .pre-commit-config.yaml  README.md  download_pokemon_shirt_patterns.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: __init__.py  download_image.py  download_methods.py
src/async_get_images/: __init__.py  download_image.py  main.py  search_pokemon.py  transform_image.py
src/async_get_images/lib/: __init__.py  constants.py  settings.py
src/pokepapers/: download_image.py  main.py  pokeapi.py  resolutions.py  search_pokemon.py  transform_image.py
src/pokepapers/lib/: pokeapi.py  settings.py
src/pokepapers/model/: download_image.py  pokemon.py  transform_image.py
tests/unit/: test_transform_image.py
